--- a/app/views/pages/index.html.erb
+++ b/app/views/pages/index.html.erb
@@ -1,3 +1,4 @@
+<%= render partial: "refills/hero" %>
 <div class="container">
-  <h1>FUCKIN INDEX</h1>
+  <%= render partial: "refills/icon_bullet_points" %>
 </div>
