added sticky footer and new centered nav

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -3,8 +3,9 @@
 @import "neat";
 @import "base/base";
 @import "refills/hero";
-@import "refills/navigation";
+@import "refills/centered-navigation";
 @import "refills/icon-bullet-points";
+@import "refills/footer-2";
 
 .container {
   @include outer-container();
