added spec framework, and user can contact browntree as a lead

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,6 +8,7 @@
 </head>
 <body>
 <div class="wrapper-for-content-outside-of-footer">
+  <%= render "flashes" %>
   <%= render partial: "refills/centered_navigation" %>
   <%= yield %>
 </div>
