--- a/app/views/shared/_links.html.erb
+++ b/app/views/shared/_links.html.erb
@@ -1,3 +1,6 @@
 <li class="nav-link">
   <a href="http://blog.browntreelabs.com" target="_blank">Blog</a>
 </li>
+<li class="nav-link">
+  <%= link_to "Contact", new_lead_path %>
+</li>
