--- a/app/views/pages/index.html.erb
+++ b/app/views/pages/index.html.erb
@@ -1,4 +1,18 @@
 <%= render partial: "refills/hero" %>
-<div class="container">
+<hr />
+<div class="container landing">
+  <h1>What we do</h1>
   <%= render partial: "refills/icon_bullet_points" %>
+</div>
+<hr />
+<div class="container landing process">
+  <h1>Our Process</h1>
+  <%= image_tag("html5-with-words") %>
+  <%= image_tag("css3-with-words") %>
+  <%= image_tag("backbone-logo") %>
+  <%= image_tag("emberjs-logo") %>
+  <br />
+  <%= image_tag("rails-logo") %>
+  <%= image_tag("postgresql-logo1") %>
+  <%= image_tag("heroku-logo") %>
 </div>
