--- a/app/views/refills/_icon_bullet_points.html.erb
+++ b/app/views/refills/_icon_bullet_points.html.erb
@@ -5,17 +5,17 @@
 " alt="">
     </div>
     <div class="bullet-content">
-      <h2>This Bullet Title</h2>
-      <p>Lorem dolor sit amet consectetur adipisicing elit. Doloremque, minus, blanditiis, voluptatibus nulla quia ipsam sequi quos iusto aliquam iste magnam accusamus molestias quo illum impedit. Odit officia autem.</p>
+      <h2>Staff Augmentation</h2>
+      <p>Need to quickly scale up your team to meet deadlines? We can help.</p>
       </div>
-  </li>  
+  </li>
   <li class="bullet three-col-bullet">
     <div class="bullet-icon bullet-icon-2">
       <img src="https://raw.githubusercontent.com/thoughtbot/refills/master/source/images/placeholder_logo_3.png" alt="">
     </div>
     <div class="bullet-content">
-      <h2>Another Bullet Title</h2>
-      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloremque, minus, blanditiis, voluptatibus nulla quia ipsam sequi quos iusto aliquam iste magnam accusamus molestias quo illum.</p>
+      <h2>Mentoring and Training</h2>
+      <p>We are experienced, and dedicated mentors. Let us turn your junior devs into rockstars.</p>
     </div>
   </li>
   <li class="bullet three-col-bullet">
@@ -23,8 +23,8 @@
       <img src="https://raw.githubusercontent.com/thoughtbot/refills/master/source/images/placeholder_logo_4.png" alt="">
     </div>
     <div class="bullet-content">
-      <h2>Last Bullet Title</h2>
-      <p>Lorem ipsum sit amet consectetur adipisicing elit. Doloremque, minus, blanditiis, voluptatibus nulla quia ipsam sequi quos iusto aliquam iste magnam accusamus molestias quo illum impedit. Odit officia autem.</p>
+      <h2>Process Improvement</h2>
+      <p>With a large amount of experience from release engineering, through managing teams of developers, we can handle your process improvement needs</p>
     </div>
   </li> 
 </ul>
