--- a/app/views/shared/_links.html.erb
+++ b/app/views/shared/_links.html.erb
@@ -4,3 +4,4 @@
 <li class="nav-link">
   <%= link_to "Contact", new_lead_path %>
 </li>
+<li class="nav-link"><a href="javascript:void(0)">About Us</a></li>
