add images and logos

--- a/app/assets/stylesheets/refills/_centered-navigation.scss
+++ b/app/assets/stylesheets/refills/_centered-navigation.scss
@@ -8,7 +8,7 @@
 
   $centered-navigation-padding: 1em;
   $centered-navigation-logo-height: 2em;
-  $centered-navigation-background: #E7F1EC;
+  $centered-navigation-background: rgba(255,165,0,0.6);
   $centered-navigation-color: transparentize($base-font-color, 0.3);
   $centered-navigation-color-hover: $base-font-color;
   $centered-navigation-height: 60px;
