--- a/app/assets/stylesheets/refills/_footer-2.scss
+++ b/app/assets/stylesheets/refills/_footer-2.scss
@@ -27,7 +27,7 @@ html, body {
 .footer-2 {
   ///////////////////////////////////////////////////////////////////////////////////
   $base-spacing: 1.5em !default;
-  $base-accent-color: #477DCA !default;
+  $base-accent-color: $blue !default;
   $medium-screen: em(640) !default;
   $large-screen: em(860) !default;
   
