--- a/app/assets/stylesheets/refills/_icon-bullet-points.scss
+++ b/app/assets/stylesheets/refills/_icon-bullet-points.scss
@@ -21,6 +21,11 @@
     line-height: $base-line-height;
   }
 
+  i {
+    color: white;
+    font-size: 26px;
+  }
+
   img {
     max-width: 100%;
   }
