--- a/app/views/refills/_icon_bullet_points.html.erb
+++ b/app/views/refills/_icon_bullet_points.html.erb
@@ -1,8 +1,7 @@
 <ul class="bullets">
   <li class="bullet three-col-bullet">
     <div class="bullet-icon bullet-icon-1">
-      <img src="https://raw.githubusercontent.com/thoughtbot/refills/master/source/images/placeholder_logo_2.png
-" alt="">
+      <i class="fa fa-thumbs-up fa-lg"></i>
     </div>
     <div class="bullet-content">
       <h2>Staff Augmentation</h2>
@@ -11,7 +10,7 @@
   </li>
   <li class="bullet three-col-bullet">
     <div class="bullet-icon bullet-icon-2">
-      <img src="https://raw.githubusercontent.com/thoughtbot/refills/master/source/images/placeholder_logo_3.png" alt="">
+      <i class="fa fa-camera-retro fa-lg"></i>
     </div>
     <div class="bullet-content">
       <h2>Mentoring and Training</h2>
@@ -20,7 +19,7 @@
   </li>
   <li class="bullet three-col-bullet">
     <div class="bullet-icon bullet-icon-3">
-      <img src="https://raw.githubusercontent.com/thoughtbot/refills/master/source/images/placeholder_logo_4.png" alt="">
+      <i class="fa fa-cogs fa-lg"></i>
     </div>
     <div class="bullet-content">
       <h2>Process Improvement</h2>
