--- a/app/views/refills/_centered_navigation.html.erb
+++ b/app/views/refills/_centered_navigation.html.erb
@@ -1,7 +1,6 @@
 <header class="centered-navigation" role="banner">
   <div class="centered-navigation-wrapper">
     <a href="javascript:void(0)" class="mobile-logo">
-      <img src="https://raw.githubusercontent.com/thoughtbot/refills/master/source/images/placeholder_logo_3_dark.png" alt="Logo image">
     </a>
     <a href="javascript:void(0)" id="js-centered-navigation-mobile-menu" class="centered-navigation-mobile-menu">MENU</a>
     <nav role="navigation">
@@ -9,7 +8,7 @@
         <%= render partial: "shared/links" %>
         <li class="nav-link logo">
           <%= link_to root_path do %>
-            <img src="https://raw.githubusercontent.com/thoughtbot/refills/master/source/images/placeholder_logo_3_dark.png" alt="Logo image">
+            BTL
           <% end %>
         </li>
         <li class="nav-link"><a href="javascript:void(0)">Testimonials</a></li>
