--- a/app/views/refills/_hero.html.erb
+++ b/app/views/refills/_hero.html.erb
@@ -1,8 +1,8 @@
 <div class="hero">
   <div class="hero-inner">
-    <a href="" class="hero-logo">
-      <img src="https://raw.githubusercontent.com/thoughtbot/refills/master/source/images/placeholder_logo_1.png" alt="Logo Image">
-    </a>
+    <!-- <a href="" class="hero&#45;logo"> -->
+    <!--   <img src="https://raw.githubusercontent.com/thoughtbot/refills/master/source/images/placeholder_logo_1.png" alt="Logo Image"> -->
+    <!-- </a> -->
     <div class="hero-copy">
       <h1>Brown Tree Labs</h1>
       <p>We are a <span>web development consultancy</span> based in southern CT.</p>
