--- a/app/views/pages/index.html.erb
+++ b/app/views/pages/index.html.erb
@@ -6,12 +6,12 @@
 <hr />
 <div class="container landing process">
   <h1>Our Process</h1>
-  <%= image_tag("html5-with-words") %>
-  <%= image_tag("css3-with-words") %>
-  <%= image_tag("backbone-logo") %>
-  <%= image_tag("emberjs-logo") %>
+  <%= image_tag("html5-with-words.png") %>
+  <%= image_tag("css3-with-words.png") %>
+  <%= image_tag("backbone-logo.png") %>
+  <%= image_tag("emberjs-logo.png") %>
   <br />
-  <%= image_tag("rails-logo") %>
-  <%= image_tag("postgresql-logo1") %>
-  <%= image_tag("heroku-logo") %>
+  <%= image_tag("rails-logo.png") %>
+  <%= image_tag("postgresql-logo1.png") %>
+  <%= image_tag("heroku-logo.png") %>
 </div>
