--- a/app/assets/stylesheets/refills/_hero.scss
+++ b/app/assets/stylesheets/refills/_hero.scss
@@ -21,7 +21,6 @@
   }
   padding-bottom: 3em;
 
-
   .hero-logo img {
     height: 4em;
     margin-bottom: 1em;
@@ -54,6 +53,7 @@
         }
         font-size: 1.4em;
         font-weight: 200;
+        padding-bottom: 20px;
         line-height: 1.4em;
         margin: 0 auto 2em auto;
 
