--- a/app/views/pages/index.html.erb
+++ b/app/views/pages/index.html.erb
@@ -1,11 +1,11 @@
 <%= render partial: "refills/hero" %>
 <div class="container landing">
-  <h1>What we do</h1>
+  <h1>What gets done</h1>
   <%= render partial: "refills/icon_bullet_points" %>
 </div>
 <hr />
 <div class="container landing process">
-  <h1>Our Process</h1>
+  <h1>Tools of the Trade</h1>
   <%= image_tag("html5-with-words.png") %>
   <%= image_tag("css3-with-words.png") %>
   <%= image_tag("backbone-logo.png") %>
