--- a/app/views/refills/_footer_2.html.erb
+++ b/app/views/refills/_footer_2.html.erb
@@ -2,24 +2,19 @@
     <div class="footer-logo">
     </div>
       <ul>
-        <li><a href="javascript:void(0)">About</a></li>
         <%= render partial: "shared/links" %>
+        <li class="nav-link"><a href="javascript:void(0)">About</a></li>
       </ul>
 
       <div class="footer-secondary-links">
         <ul>
-          <li><a href="javascript:void(0)">Terms and Conditions</a></li>
-          <li><a href="javascript:void(0)">Privacy Policy</a></li>
         </ul>
 
         <ul class="footer-social">
-          <li><a href="javascript:void(0)">
-            <img src="https://raw.githubusercontent.com/thoughtbot/refills/master/source/images/facebook-logo-circle.png" alt="Facebook">
-            </a></li>
-          <li><a href="javascript:void(0)">
+          <li><a href="https://twitter.com/cpowrox">
             <img src="https://raw.githubusercontent.com/thoughtbot/refills/master/source/images/twitter-logo-circle.png" alt="Twitter">
           </a></li>
-          <li><a href="javascript:void(0)">
+          <li><a href="https://www.youtube.com/user/cpow85">
             <img src="https://raw.githubusercontent.com/thoughtbot/refills/master/source/images/youtube-logo-circle.png" alt="YouTube">
           </a></li>
         </ul>
