--- a/app/views/shared/_links.html.erb
+++ b/app/views/shared/_links.html.erb
@@ -4,4 +4,5 @@
 <li class="nav-link">
   <%= link_to "Contact", new_lead_path %>
 </li>
-<li class="nav-link"><a href="javascript:void(0)">About Us</a></li>
+<li class="nav-link"><%= link_to 'About', page_path('about') %></li>
+<li class="nav-link"><a href="javascript:void(0)">My Work</a></li>
