caching through cloudfront. updated copy

--- a/app/views/leads/new.html.erb
+++ b/app/views/leads/new.html.erb
@@ -1,7 +1,7 @@
 <div class="container landing">
-  <h1>Contact Me</h1>
+  <h1>Have something you're working on?</h1>
   <p style="text-align:center;">
-  I'm always open to hearing your ideas! Please tell me a little about yourself and I'll get back very shortly. Thank you!
+  We're always open to hearing your ideas! Please tell us a little about yourself and I'll get back very shortly. Thank you!
   </p>
   <fieldset>
     <%= form_for @lead do |f| %>
