--- a/app/views/refills/_footer_2.html.erb
+++ b/app/views/refills/_footer_2.html.erb
@@ -1,23 +1,26 @@
-  <footer class="footer-2" role="contentinfo">
-    <div class="footer-logo">
-    </div>
+<footer class="footer-2" role="contentinfo">
+  <!-- Start of HubSpot Embed Code -->
+  <script type="text/javascript" id="hs-script-loader" async defer src="//js.hs-scripts.com/1804205.js"></script>
+  <!-- End of HubSpot Embed Code -->
+  <div class="footer-logo">
+  </div>
+    <ul>
+      <%= render partial: "shared/links" %>
+      <li class="nav-link"><a href="javascript:void(0)">About</a></li>
+    </ul>
+
+    <div class="footer-secondary-links">
       <ul>
-        <%= render partial: "shared/links" %>
-        <li class="nav-link"><a href="javascript:void(0)">About</a></li>
       </ul>
 
-      <div class="footer-secondary-links">
-        <ul>
-        </ul>
-
-        <ul class="footer-social">
-          <li><a href="https://twitter.com/cpowrox">
-            <img src="https://raw.githubusercontent.com/thoughtbot/refills/master/source/images/twitter-logo-circle.png" alt="Twitter">
-          </a></li>
-          <li><a href="https://www.youtube.com/user/cpow85">
-            <img src="https://raw.githubusercontent.com/thoughtbot/refills/master/source/images/youtube-logo-circle.png" alt="YouTube">
-          </a></li>
-        </ul>
-      </div>
-  </footer>
+      <ul class="footer-social">
+        <li><a href="https://twitter.com/cpowrox">
+          <img src="https://raw.githubusercontent.com/thoughtbot/refills/master/source/images/twitter-logo-circle.png" alt="Twitter">
+        </a></li>
+        <li><a href="https://www.youtube.com/user/cpow85">
+          <img src="https://raw.githubusercontent.com/thoughtbot/refills/master/source/images/youtube-logo-circle.png" alt="YouTube">
+        </a></li>
+      </ul>
+    </div>
+</footer>
 
