--- a/app/views/refills/_hero.html.erb
+++ b/app/views/refills/_hero.html.erb
@@ -5,7 +5,7 @@
     <!-- </a> -->
     <div class="hero-copy">
       <h1>Brown Tree Labs</h1>
-      <p>A <span>web development consultancy</span> based in southern CT.</p>
+      <p>We are a <span>web development consultancy</span> based in southern CT.</p>
     </div>
     <%= link_to new_lead_path do %>
       <button>Learn More</button>
