--- a/app/views/refills/_icon_bullet_points.html.erb
+++ b/app/views/refills/_icon_bullet_points.html.erb
@@ -5,7 +5,7 @@
     </div>
     <div class="bullet-content">
       <h2>Staff Augmentation</h2>
-      <p>Need to quickly scale up your team to meet deadlines? I can help.</p>
+      <p>Need to quickly scale up your team to meet deadlines? We can help.</p>
       </div>
   </li>
   <li class="bullet three-col-bullet">
@@ -14,7 +14,7 @@
     </div>
     <div class="bullet-content">
       <h2>Mentoring and Training</h2>
-      <p>I am an experienced, and dedicated mentor. Let me turn your junior devs into rockstars.</p>
+      <p>We are experienced and dedicated mentors. Let us turn your junior devs into rockstars.</p>
     </div>
   </li>
   <li class="bullet three-col-bullet">
@@ -23,7 +23,7 @@
     </div>
     <div class="bullet-content">
       <h2>Process Improvement</h2>
-      <p>With a large amount of experience from release engineering, through managing teams of developers, I can handle your process improvement needs</p>
+      <p>With a large amount of experience from release engineering, through managing teams of developers, we can handle your process improvement needs</p>
     </div>
   </li>
 </ul>
