--- a/app/views/shared/_links.html.erb
+++ b/app/views/shared/_links.html.erb
@@ -5,4 +5,4 @@
   <%= link_to "Contact", new_lead_path %>
 </li>
 <li class="nav-link"><%= link_to 'About', page_path('about') %></li>
-<li class="nav-link"><a href="javascript:void(0)">My Work</a></li>
+<!-- <li class="nav&#45;link"><a href="javascript:void(0)">Our Work</a></li> -->
