add google tag for gsuite stuff

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
+  <meta name="google-site-verification" content="HTFzsglnTIDE7iZclnzVt2pnKvU_u6VWYhWt48RCy7g" />
   <meta name="viewport" content="width=device-width,initial-scale=1.0">
   <title>BrownTreeLabs</title>
   <%= stylesheet_link_tag 'application', media: 'all' %>
